[cs-ui] Fixed shifting page up when quick links are clicked on demo app

--- a/cs-ui-demo/src/App.scss
+++ b/cs-ui-demo/src/App.scss
@@ -289,6 +289,7 @@ body,
 		box-shadow: 0 0 10px rgba(#000, 0.22);
 
 		.preview-section-wrapper {
+			position: relative;
 			display: flex;
 			flex-direction: column;
 			flex: 1;
